--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "source-map-support": "^0.5.3"
   },
   "devDependencies": {
+    "@types/react": "^16.0.36",
+    "@types/react-dom": "^16.0.3",
+    "babel-preset-react": "^6.24.1",
     "electron": "1.7.11",
     "electron-builder": "^19.55.3",
     "electron-webpack": "1.12.1",
+    "electron-webpack-ts": "^1.3.0",
+    "prop-types": "^15.6.0",
+    "ts-loader": "^3.4.0",
+    "typescript": "^2.7.1",
     "webpack": "^3.10.0"
   }
 }
